--- a/vault.css
+++ b/vault.css
@@ -1,19 +1,113 @@
 /* BACKGROUND */
-body {
+.front {
   background-image: url("vaultdoor.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-color: rgb(93, 69, 47);
 }
+.mess {
+  background-image: url("https://cdna.artstation.com/p/assets/images/images/013/242/702/large/bryan-tsai-15440334-10154917967248010-30808027857361677-o.jpg?1538701308");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: rgb(93, 69, 47);
+}
+
+/* TITLE */
 #title {
-  font-size: 40px
-  text-shadow: 12px -2px 3px rgb(152, 130, 88);
+  font-size: 80px;
+  text-shadow: 9px 2px 3px rgba(95, 71, 26, 0.737);
   padding-left: 5px;
-  display: flex;
+  margin-top: 165px;
 }
+
+/* BUTTON CHOICES */
+#click {
+  font-size: 30px;
+  text-shadow: 4px 6px 8px;
+  margin-left: 30px;
+  margin-top: 150px;
+}
+/* button1 */
+.button1 {
+  padding: 15px 25px;
+  font-size: 30px;
+  text-align: center;
+  cursor: pointer;
+  outline: double rgba(0, 0, 0, 0.824);
+  color: #ff9d00bc;
+  background-color: #000000d9;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #452c0e7c;
+  margin-right: 10px;
+  margin-left: 30px;
+}
+.button1:hover {
+  background-color: #3c2603d9;
+}
+
+.button1:active {
+  background-color: #3c2603d9;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+/* button2 */
+.button2 {
+  padding: 15px 25px;
+  font-size: 30px;
+  text-align: center;
+  cursor: pointer;
+  outline: double rgba(0, 0, 0, 0.824);
+  color: #ff9d00bc;
+  background-color: #000000d9;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #452c0e7c;
+  margin-right: 10px;
+  margin-left: 5px;
+}
+
+.button2:hover {
+  background-color: #3c2603d9;
+}
+
+.button2:active {
+  background-color: #3c2603d9;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+/* button3 */
+.button3 {
+  padding: 15px 25px;
+  font-size: 30px;
+  text-align: center;
+  cursor: pointer;
+  outline: double rgba(0, 0, 0, 0.824);
+  color: #ff9d00bc;
+  background-color: #000000d9;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #452c0e7c;
+  margin-right: 10px;
+  margin-left: 5px;
+}
+
+.button3:hover {
+  background-color: #3c2603d9;
+}
+
+.button3:active {
+  background-color: #3c2603d9;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+/* SECRET MESSAGE */
 #message {
-  font-size: medium;
-  text-shadow: 2px 2px 1px rgb(255, 255, 255);
-  display: contents;
-  margin-top: 20px;
+  font-size: 13px;
+  font-weight: bolder;
+  text-shadow: 3px 2px 2px rgb(34, 19, 2);
+  padding-left: 10px;
   margin-left: 10px;
+  margin-top: 90px;
 }
