--- a/vault.css
+++ b/vault.css
@@ -6,25 +6,6 @@
   background-color: rgb(93, 69, 47);
 }
 
-/* SECRET MESSAGE */
-#message {
-  font-size: 20px;
-  font-weight: lighter;
-  text-align: center;
-  text-shadow: 3px 2px 1px rgb(70, 33, 18);
-  position: absolute;
-  right: 0px;
-  top: 2px;
-  margin-top: 10px;
-  background-color: rgba(129, 81, 49, 0.362);
-}
-.mess {
-  background-image: url("https://cdna.artstation.com/p/assets/images/images/013/242/702/large/bryan-tsai-15440334-10154917967248010-30808027857361677-o.jpg?1538701308");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-color: rgba(0, 0, 0, 0.883);
-}
-
 /* TITLE */
 #title {
   font-size: 300px;
@@ -35,15 +16,18 @@
 
 /* BUTTON CHOICES */
 #click {
-  font-size: 30px;
-  text-shadow: 4px 6px 8px;
+  font-size: 35px;
+  text-shadow: 4px 2px 10px rgb(159, 50, 0);
+  background-color: brown;
+  width: 610px;
+  padding-left: 10px;
   margin-left: 30px;
   margin-top: 150px;
 }
 /* button1 */
 .button1 {
   padding: 15px 25px;
-  font-size: 30px;
+  font-size: 35px;
   text-align: center;
   cursor: pointer;
   outline: double rgba(0, 0, 0, 0.824);
@@ -67,7 +51,7 @@
 /* button2 */
 .button2 {
   padding: 15px 25px;
-  font-size: 30px;
+  font-size: 35px;
   text-align: center;
   cursor: pointer;
   outline: double rgba(0, 0, 0, 0.824);
@@ -92,7 +76,7 @@
 /* button3 */
 .button3 {
   padding: 15px 25px;
-  font-size: 30px;
+  font-size: 35px;
   text-align: center;
   cursor: pointer;
   outline: double rgba(0, 0, 0, 0.824);
@@ -113,4 +97,32 @@
   background-color: #3c2603d9;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
+}
+
+/* SECRET MESSAGE */
+#message {
+  font-size: 20px;
+  font-weight: lighter;
+  text-align: center;
+  text-shadow: 3px 2px 1px rgb(70, 33, 18);
+  position: absolute;
+  right: 0px;
+  top: 2px;
+  margin-top: 10px;
+  background-color: rgba(129, 81, 49, 0.362);
+}
+.mess {
+  background-image: url("https://cdna.artstation.com/p/assets/images/images/013/242/702/large/bryan-tsai-15440334-10154917967248010-30808027857361677-o.jpg?1538701308");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.883);
+  text-align: center;
+  text-shadow: -2px 3px 8px rgb(0, 255, 229);
+}
+#sell {
+  font-size: 35px;
+  background-color: rgba(64, 62, 56, 0.54);
+  border: solid 2px rgba(255, 255, 255, 0.156);
+  display: block;
+  margin-top: 20px;
 }
