--- a/vault.css
+++ b/vault.css
@@ -1,6 +1,6 @@
 /* BACKGROUND */
 .front {
-  background-image: url("vaultdoor.jpg");
+  background-image: url("pic/vaultdoor.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-color: rgb(93, 69, 47);
@@ -9,7 +9,8 @@
 /* TITLE */
 #title {
   font-size: 300px;
-  text-shadow: 19px 4px 20px rgb(91, 51, 35);
+  text-shadow: 19px 15px 10px rgb(0, 0, 0);
+  width: 1300px;
   padding-left: 5px;
   margin-top: 165px;
 }
@@ -17,8 +18,8 @@
 /* BUTTON CHOICES */
 #click {
   font-size: 35px;
-  text-shadow: 4px 2px 10px rgb(159, 50, 0);
-  background-color: brown;
+  text-shadow: 4px 2px 10px rgba(0, 0, 0, 0.823);
+  background-color: rgba(243, 201, 166, 0.251);
   width: 610px;
   padding-left: 10px;
   margin-left: 30px;
@@ -37,7 +38,7 @@
   border-radius: 15px;
   box-shadow: 0 9px #452c0e7c;
   margin-right: 10px;
-  margin-left: 30px;
+  margin-left: 43px;
 }
 .button1:hover {
   background-color: #3c2603d9;
@@ -119,10 +120,39 @@
   text-align: center;
   text-shadow: -2px 3px 8px rgb(0, 255, 229);
 }
+#side {
+  text-shadow: none;
+  background-color: pink;
+}
 #sell {
   font-size: 35px;
   background-color: rgba(64, 62, 56, 0.54);
   border: solid 2px rgba(255, 255, 255, 0.156);
   display: block;
   margin-top: 20px;
+}
+/* cheat button */
+.buttons {
+  padding: 2px 5px;
+  font-size: 12px;
+  text-align: center;
+  cursor: pointer;
+  outline: solid 4px rgba(0, 0, 0, 0.137);
+  background-color: #0000002a;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 1px 2px 9px #00000025;
+  margin-right: 10px;
+  margin-left: 200px;
+  margin-top: 648px;
+}
+
+.buttons:hover {
+  background-color: #0000005d;
+}
+
+.buttons:active {
+  background-color: #00000048;
+  box-shadow: 1px 2px 6px #5eff8449;
+  transform: translateY(4px);
 }
